// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`ArticleGroup should render properly with required props 1`] = `
=======
exports[`ArticleGroup should render with required props 1`] = `
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
<div
  className="articlesGroup"
>
  <h2>
    test
  </h2>
  <ul>
    <li>
      <OutboundLink
        analyticsEventLabel="Press Article"
<<<<<<< HEAD
        className=""
=======
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
        hasIcon={true}
        href="https://example.com"
      >
        Example
      </OutboundLink>
    </li>
  </ul>
</div>
`;

<<<<<<< HEAD
exports[`ArticleGroup should render properly with required props and 3 links and a button 1`] = `
=======
exports[`ArticleGroup should render with required props and 3 links and a button 1`] = `
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
<div
  className="articlesGroup"
>
  <h2>
    test
  </h2>
  <ul>
    <li>
      <OutboundLink
        analyticsEventLabel="Press Article"
<<<<<<< HEAD
        className=""
=======
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
        hasIcon={true}
        href="https://example.com"
      >
        Example
      </OutboundLink>
    </li>
  </ul>
  <Button
    analyticsObject={
      Object {
        "action": "Button Selected",
        "category": "Interactions",
      }
    }
    aria-pressed={false}
    className="areAllLinksVisibleButton"
    datum=""
    disabled={false}
    fullWidth={false}
    onClick={[Function]}
    tabIndex={0}
    theme="primary"
    type="button"
  >
    Show All
  </Button>
</div>
`;
